frontend/test/should_pass/set_003.grg
using set_model_002;

test testWrongType {
	a:A;
	
	if { a.intValue in a.stringSet; }
}