frontend/test/should_fail/set_001.grg
using set_model_001;

test testWrongType {
	a:A;
	
	if {
		a.stringValue in a.intSet;
	}
}